--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Navbar Project</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -19,5 +20,11 @@
             </ul>
         </nav>
     </header>
+    <main>
+
+    </main>
+    <footer id="footer">
+        <p>Page Design by Lukas Semenyuk &copy;</p>
+    </footer>
 </body>
 </html>
