--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Responsive Navbar Project</h1>
+        <nav id="menu"></nav>
         <nav>
             <ul>
                 <li><a href="index.html">home</a></li>
@@ -21,7 +22,35 @@
         </nav>
     </header>
     <main>
+        <!-- Fuller Html text-->
 
+        <h2> Lorem Ipsum</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna 
+            aliqua. Dignissim diam quis enim lobortis scelerisque 
+            fermentum dui faucibus in. Lectus sit amet est placerat 
+            in egestas. At lectus urna duis convallis convallis tellus 
+            id interdum. Varius sit amet mattis vulputate enim nulla 
+            aliquet porttitor. Duis at consectetur lorem donec massa. 
+            Sapien nec sagittis aliquam malesuada. Augue ut lectus arcu 
+            bibendum at varius vel pharetra vel. Lectus sit amet est 
+            placerat in egestas. Morbi enim nunc faucibus a pellentesque 
+            sit amet porttitor eget. Proin nibh nisl condimentum id 
+            venenatis a condimentum vitae sapien. Varius quam quisque 
+            id diam. Vitae tortor condimentum lacinia quis vel eros donec 
+            ac. Faucibus pulvinar elementum integer enim. Pharetra convallis 
+            posuere morbi leo. Sapien eget mi proin sed libero enim sed 
+            faucibus turpis. Nisi porta lorem mollis aliquam ut porttitor 
+            leo a. Ornare arcu odio ut sem nulla pharetra diam sit. Amet 
+            nisl suscipit adipiscing bibendum est ultricies integer quis. 
+            Vulputate enim nulla aliquet porttitor lacus luctus accumsan.</p>
+            <ul>
+                <li>Auctor urna nunc id cursus metus aliquam eleifend.</li>
+                <li>Habitant morbi tristique senectus et.</li>
+                <li>Egestas sed tempus urna et pharetra pharetra 
+                    massa massa ultricies.</li>
+                <li>Morbi tincidunt augue interdum velit euismod.</li>
+            </ul>
     </main>
     <footer id="footer">
         <p>Page Design by Lukas Semenyuk &copy;</p>
