--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Navbar Project</title>
-    <link rel="stylesheet" href="styles1.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -65,5 +65,6 @@
 
         <p>Page Design by Lukas Semenyuk &copy;</p>
     </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
